# cbi_scrna_2026

./: LICENSE  README.md  problem_set.md  pyproject.toml
ipynb/: scrna_day_1.ipynb
ipynb/.ipynb_checkpoints/: scrna_day_1_cleaned_annotated-checkpoint.ipynb  scrna_day_1_reordered_to_match_slides-checkpoint.ipynb
src/sctoolkit/: __init__.py  helpers.py
src/sctoolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
