[project]
name = "sctoolkit"
version = "0.01"
description = "A toolkit of helper functions to accelerate single-cell analysis workflows with Scanpy."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "CGSB", email = "gas361@nyu.edu" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "scipy",
  "numpy<2.0",
  "pandas",
  "scanpy",
  "harmonypy",
  "scvi-tools",
  "seaborn",
  "leidenalg",
  "python-igraph",
  'scrublet',
  "jupyterlab"
]

# URLs for the project
[project.urls]
Homepage = "https://github.com/gs512/das2_sc_toolkit"

# Build system configuration
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Ruff linter and formatter configuration
[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
# A selection of sensible default rules
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]

[tool.ruff.format]
quote-style = "double"